[project]
name = "path2ai"
version = "0.1.0"
description = "Path2AI"
authors = [{ name = "Cormick", email = "cormick@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.21",
    "tqdm>=4.67",
    "matplotlib>=3.4"
]
requires-python = ">=3.8"
readme = "README.md"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true
